<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>sm.hardcoded.reader</groupId>
  <artifactId>sm-reader</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub Kariaro Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/Kariaro/ScrapMechanicReader</url>
    </repository>
  </distributionManagement>
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>